<resources>
    <string name="app_name">Himpunan ITB</string>
    <string name="nama_lengkap">Muhammad Jafar</string>
    <string name="namaHimpunan">Himpunan A</string>
    <string name="singkatan">HMMA</string>
    <string name="instagram">Instagram</string>
    <string name="profile">Profile</string>
    <string name="list">List Himpunan</string>
    <string name="about">About</string>
    <string name="name">Muhammad Jafar</string>
    <string name="github">mhmmdjafarg</string>
    <string name="email">mjafarashadiq712@gmail.com</string>
    <string name="deskripsi_himpunan">Himpunan Mahasiswa Mesin ITB (HMM ITB) adalah organisasi kemahasiswaan non-profit yang bergerak berdasarkan asas kekeluargaan\n
        Organisasi ini pada awalnya berdiri pada Desember 1946 sebagai bentuk pergerakan kemahasiswaan dengan nama Himpunan Mahasiswa Bangunan Mesin dan Listrik (HMBL)\n
        Pada tahun 1956, organisasi kemahasiswaan ini kemudian berganti nama menjadi Himpunan Mahasiswa Mesin ITB, dengan Robert Sufsidi sebagai ketua umum HMM ITB kepengurusan pertama.</string>
    <string name="social_himpunan">Visit Instagram</string>
    <string name="share">share</string>
</resources>