<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo_himpunan"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/himasda" />

        <TextView
            android:id="@+id/title_himpunan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/namaHimpunan"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/singkatan_himpunan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="HME"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deskripsi_himpunan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:justificationMode="inter_word"
            android:padding="8dp"
            android:text="@string/deskripsi_himpunan"
            android:textSize="18sp" />

        <Button
            android:id="@+id/social_himpunan"
            style="@style/ButtonGeneral"
            android:text="@string/social_himpunan" />
    </LinearLayout>

</ScrollView>