<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="4dp"
            android:scaleType="fitCenter"
            tools:src="@drawable/hme"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Himpunan Mahasiswa Mesin"/>

        <TextView
            android:id="@+id/tv_item_singkatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_name"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:textSize="16sp"
            tools:text="@string/singkatan" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_below="@id/tv_item_singkatan"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_toRightOf="@+id/img_item_photo"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Button
                android:id="@+id/btn_profile"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/share"
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>